--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.1.1",
+    "class": "^0.1.4",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "transformer": "^1.2.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
